# husika-tts-mobile

./: LICENSE  NOTICE  README.md  app.config.js  app.json  eas.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/meddhiakassab/husikattsboilerplate/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: network_security_config.xml
app/: _layout.tsx  index.tsx  languages.tsx
app/language/: [code].tsx
assets/logos/: README.md
data/: languages.ts
hooks/: use-network-status.ts  use-piper-download.ts  use-tts.ts
ios/: Podfile
ios/HusikaTTS/: Info.plist  SplashScreen.storyboard
ios/HusikaTTS.xcodeproj/: project.pbxproj
ios/HusikaTTS.xcodeproj/xcshareddata/xcschemes/: HusikaTTS.xcscheme
ios/HusikaTTS/Images.xcassets/SplashScreenBackground.colorset/: Contents.json
modules/expo-espeak/: expo-module.config.json  package.json
modules/expo-espeak/android/: .gitignore  CMakeLists.txt  build.gradle
modules/expo-espeak/android/espeak-ng-src/libespeak-ng/: compilembrola.c  config.h
modules/expo-espeak/android/jni/: espeak_bridge.cpp
modules/expo-espeak/android/src/main/: AndroidManifest.xml
modules/expo-espeak/android/src/main/java/expo/modules/espeak/: ExpoEspeakModule.kt
modules/expo-espeak/src/: index.ts  index.web.ts
services/: husika-api.ts
theme/: paper-theme.ts
